# pipeweaver-app

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  main.qml
.github/ci/: build-packages
.github/workflows/: build-release.yml  build.yml  get-version.yml
resources/: pipeweaver-app.desktop
src/: main.rs  window_handler.rs  window_properties.rs
